# tiktok-video-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/utils/: formatting.py  story.py  tts.py  video.py
